--- a/web/app/themes/midgardstheme/sass/partials/_header.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_header.scss
@@ -1,3 +1,62 @@
-h1 {
-    color: red;
+.site-header
+{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 2fr 1fr;
+    text-align: center;
+}
+
+.header-icon img
+{
+    height: 200px;
+    width: 200px;
+}
+
+.header-title a, .header-title a:hover
+{
+    color: black;
+    text-decoration: none;
+}
+
+.menu-main-container
+{
+    grid-row: 2;
+    padding-top: 1rem;
+}
+
+#menu-main
+{
+    display: flex;
+    list-style: none;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: rgb(58 58 58 / 65%);
+    height: 3rem;
+}
+
+#menu-main a
+{
+    text-decoration: none;
+    color: black;
+}
+
+#menu-main a:hover
+{
+    text-decoration: underline;
+    color: black;
+}
+
+#front-page-pic
+{
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    z-index: -1;
+    background: linear-gradient(to top, rgba(128, 128, 128, 0.232), rgba(128, 128, 128, 0.232)), url(http://midgards.test/app/uploads/2022/11/7616CD63-94C7-4EA8-B551-C33673606816.jpeg) no-repeat top center;
+}
+
+#front-page-pic img
+{
+    width: 100%;
+    height: 100%;
 }
