--- a/web/app/themes/midgardstheme/sass/style.scss
+++ b/web/app/themes/midgardstheme/sass/style.scss
@@ -1,2 +1,7 @@
 @import 'partials/header';
 @import 'partials/news-grid';
+
+//GENERAL
+@import 'general/colors';
+@import 'general/responsive';
+@import 'general/typography';
