--- a/web/app/themes/midgardstheme/sass/partials/_news-grid.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_news-grid.scss
@@ -1,25 +1,76 @@
-
 @import '../general/responsive';
-@import '../general/default';
 @import '../general/colors';
+
+body {
+    background-color: $falu !important;
+}
 
 .news-heading {
     margin: 5rem 0 5rem;
+    padding-bottom: 10px;
+    display: inline-block;
+    border-bottom: 3px solid rgb(232, 232, 232);
 }
-
 .news-grid {
-
     img {
         width: 100%;
         height: auto;
     }
+
+    .news-grid-card {
+        background-color: white;
+
+        a {
+            text-decoration: none;
+            color: black;
+        }
+
+        .card-title {
+            padding-bottom: 10px;
+            border-bottom: 3px solid black;
+            display: inline-block;
+            margin: 15px;
+        }
+
+        img {
+            margin: 15px 0px 15px;
+            padding: 0px 15px;
+        }
+        p{
+           padding: 15px;
+        }
+    }
+
+    .card-date-link {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 15px;
+
+        .card-date, .card-read-more{
+            font-size: 14px;
+        }
+
+        .card-read-more {
+            background-color: rgb(220, 220, 220);
+            border-radius: 3px;
+            padding: 5px;
+        }
+
+        .card-read-more:hover {
+            background-color: rgb(67, 67, 67);
+            color: white;
+        }
+    
+    }
+   
 }
 
 @media (min-width: $tablet) {
     .news-grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 3rem;
+        gap: 2rem;
     
         img {
             width: 100%;
@@ -32,7 +83,7 @@
 .news-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 3rem;
+    gap: 2rem;
 
     img {
         width: 100%;
