--- a/web/app/themes/midgardstheme/sass/partials/_news-grid.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_news-grid.scss
@@ -18,7 +18,9 @@ body {
     }
 
     .news-grid-card {
-        background-color: white;
+        background-color: rgb(236, 228, 228);
+        display: flex;
+flex-direction: column;
 
         a {
             text-decoration: none;
@@ -51,8 +53,12 @@ body {
             font-size: 14px;
         }
 
+        .card-date {
+            padding: 5px;
+        }
+
         .card-read-more {
-            background-color: rgb(220, 220, 220);
+            background-color: rgb(194, 194, 194);
             border-radius: 3px;
             padding: 5px;
         }
