--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -18,7 +18,9 @@ body {
   height: auto;
 }
 .news-grid .news-grid-card {
-  background-color: white;
+  background-color: rgb(236, 228, 228);
+  display: flex;
+  flex-direction: column;
 }
 .news-grid .news-grid-card a {
   text-decoration: none;
@@ -46,8 +48,11 @@ body {
 .news-grid .card-date-link .card-date, .news-grid .card-date-link .card-read-more {
   font-size: 14px;
 }
+.news-grid .card-date-link .card-date {
+  padding: 5px;
+}
 .news-grid .card-date-link .card-read-more {
-  background-color: rgb(220, 220, 220);
+  background-color: rgb(194, 194, 194);
   border-radius: 3px;
   padding: 5px;
 }
