3-BLOG fix style in news grid

--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -21,6 +21,7 @@ body {
   background-color: rgb(236, 228, 228);
   display: flex;
   flex-direction: column;
+  border-radius: 5px;
 }
 .news-grid .news-grid-card a {
   text-decoration: none;
