--- a/web/app/themes/midgardstheme/sass/partials/_news-grid.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_news-grid.scss
@@ -20,7 +20,8 @@ body {
     .news-grid-card {
         background-color: rgb(236, 228, 228);
         display: flex;
-flex-direction: column;
+        flex-direction: column;
+        border-radius: 5px;
 
         a {
             text-decoration: none;
