--- a/web/app/themes/midgardstheme/sass/partials/_header.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_header.scss
@@ -52,11 +52,6 @@
     height: 100vh;
     position: absolute;
     z-index: -1;
-    background: linear-gradient(to top, rgba(128, 128, 128, 0.232), rgba(128, 128, 128, 0.232)), url(http://midgards.test/app/uploads/2022/11/7616CD63-94C7-4EA8-B551-C33673606816.jpeg) no-repeat top center;
-}
-
-#front-page-pic img
-{
-    width: 100%;
-    height: 100%;
+    background: linear-gradient(to top, rgba(128, 128, 128, 0.232), rgba(128, 128, 128, 0.232)), url(http://midgards.test/app/uploads/2022/11/IMG_7715.jpeg) no-repeat top center;
+    box-shadow: inset 0 0 99999px rgba(63, 63, 63, 0.496);
 }
