--- a/web/app/themes/midgardstheme/sass/style.scss
+++ b/web/app/themes/midgardstheme/sass/style.scss
@@ -1,7 +1,8 @@
 @import 'partials/header';
 @import 'partials/news-grid';
-
+@import 'partials/singlepost';
 //GENERAL
 @import 'general/colors';
 @import 'general/responsive';
 @import 'general/typography';
+
