--- a/web/app/themes/midgardstheme/sass/_frontpage.scss
+++ b/web/app/themes/midgardstheme/sass/_frontpage.scss
@@ -3,4 +3,6 @@
     text-decoration: none;
     background-color: rgb(58 58 58 / 65%);
     color: black;
+    margin-bottom: 2rem;
+    padding: 1rem;
 }
