--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -27,6 +27,7 @@
   align-items: center;
   background-color: rgba(58, 58, 58, 0.65);
   height: 3rem;
+  font-weight: 600;
 }
 
 #menu-main a {
@@ -52,4 +53,6 @@
   text-decoration: none;
   background-color: rgba(58, 58, 58, 0.65);
   color: black;
+  margin-bottom: 2rem;
+  padding: 1rem;
 }/*# sourceMappingURL=style.css.map */
