--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -50,4 +50,55 @@
 #front-page-pic img {
   width: 100%;
   height: 100%;
+}
+
+.site-footer {
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(72, 103, 123);
+  justify-content: space-around;
+  padding: 20px 0 20px 0;
+  color: #d5d5d5;
+}
+.site-footer .footer-midgard {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.site-footer .footer-halsocenter, .site-footer .footer-byggteknik {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.site-footer .footer-halsocenter span, .site-footer .footer-byggteknik span {
+  color: #d5d5d5;
+}
+.site-footer .footer-social {
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+}
+.site-footer .footer-contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.site-footer .footer-contact button {
+  border-radius: 10px;
+  border-style: none;
+  background-color: rgb(21, 94, 140);
+  padding: 10px 15px;
+  outline: none;
+}
+.site-footer .footer-contact button a {
+  color: #d5d5d5;
+  text-decoration: none;
+}
+.site-footer .footer-contact button ul {
+  list-style-type: none;
+  padding: 0;
+  margin: auto;
+}
+.site-footer .footer-contact button:hover {
+  background-color: rgb(4, 31, 48);
 }/*# sourceMappingURL=style.css.map */
