--- a/web/app/themes/midgardstheme/sass/partials/_singlepost.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_singlepost.scss
@@ -18,7 +18,7 @@
     }
 
     .single-post-description {
-        margin-top: 2rem;
+        margin: 2rem 0 2rem;
     }
 
     .single-post-image {
