--- a/web/app/themes/midgardstheme/sass/_frontpage.scss
+++ b/web/app/themes/midgardstheme/sass/_frontpage.scss
@@ -1,7 +1,7 @@
-#front-page-pic
+.front-page-pic
 {
     width: 100%;
-    height: 300vh;
+    height: 100%;
     position: absolute;
     z-index: -1;
     background: linear-gradient(to top, rgba(128, 128, 128, 0.232), rgba(128, 128, 128, 0.232)), url(http://midgards.test/app/uploads/2022/11/IMG_7715.jpeg) no-repeat top center;
@@ -11,7 +11,7 @@
 .frontpage-cont
 {
     text-decoration: none;
-    background-color: rgb(58 58 58 / 65%);
+    background-color: rgb(58 58 58 / 89%);
     color: black;
     margin: auto;
     padding: 1rem;
