--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -26,7 +26,7 @@
   list-style: none;
   justify-content: space-evenly;
   align-items: center;
-  background-color: rgba(58, 58, 58, 0.65);
+  background-color: rgba(58, 58, 58, 0.89);
   height: 3rem;
   font-weight: 600;
 }
@@ -174,9 +174,9 @@ body {
   background-color: rgb(4, 31, 48);
 }
 
-#front-page-pic {
+.front-page-pic {
   width: 100%;
-  height: 300vh;
+  height: 100%;
   position: absolute;
   z-index: -1;
   background: linear-gradient(to top, rgba(128, 128, 128, 0.232), rgba(128, 128, 128, 0.232)), url(http://midgards.test/app/uploads/2022/11/IMG_7715.jpeg) no-repeat top center;
@@ -185,7 +185,7 @@ body {
 
 .frontpage-cont {
   text-decoration: none;
-  background-color: rgba(58, 58, 58, 0.65);
+  background-color: rgba(58, 58, 58, 0.89);
   color: black;
   margin: auto;
   padding: 1rem;
