added contact form plugin and changed font color to white

--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -123,6 +123,10 @@ body {
     height: auto;
   }
 }
+.kontakt-midgard {
+  color: white;
+}
+
 .site-footer {
   display: flex;
   flex-direction: row;
