4-SINGLEPOST change color for page title in blog

--- a/web/app/themes/midgardstheme/sass/partials/_news-grid.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_news-grid.scss
@@ -9,6 +9,7 @@ body {
     margin: 5rem 0 5rem;
     padding-bottom: 10px;
     display: inline-block;
+    color: white;
     border-bottom: 3px solid rgb(232, 232, 232);
 }
 .news-grid {
