--- a/web/app/themes/midgardstheme/sass/style.scss
+++ b/web/app/themes/midgardstheme/sass/style.scss
@@ -7,6 +7,7 @@
 @import 'general/responsive';
 @import 'general/typography';
 @import 'partials/footer';
+@import 'partials/about-us';
 
 @import 'frontpage';
 
