--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -53,6 +53,9 @@ body {
   border-bottom: 3px solid rgb(232, 232, 232);
 }
 
+.news-grid {
+  margin-bottom: 3rem;
+}
 .news-grid img {
   width: 100%;
   height: auto;
@@ -62,6 +65,7 @@ body {
   display: flex;
   flex-direction: column;
   border-radius: 5px;
+  margin: 1rem 0 1rem;
 }
 .news-grid .news-grid-card a {
   text-decoration: none;
