--- a/web/app/themes/midgardstheme/sass/partials/_about-us.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_about-us.scss
@@ -3,7 +3,7 @@
 
 .about-us-content {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 3rem;
     margin: 2rem 0 2rem;
 
@@ -15,12 +15,19 @@
             padding: 0;
             background-color: $grey;
             padding: 2rem;
-            border-radius: 5%;
+            border-radius: 5px;
             line-height: 1.5rem;
         }
 
         .wp-block-media-text__media img{
-            border-radius: 5%;
+            border-radius: 5px;
         }
+    }
+}
+
+@media (min-width: $tablet) {
+    .about-us-content {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
 }
