--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -211,7 +211,7 @@ body {
 
 .about-us-content {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   gap: 3rem;
   margin: 2rem 0 2rem;
 }
@@ -223,13 +223,19 @@ body {
   padding: 0;
   background-color: rgb(236, 228, 228);
   padding: 2rem;
-  border-radius: 5%;
+  border-radius: 5px;
   line-height: 1.5rem;
 }
 .about-us-content .wp-block-media-text .wp-block-media-text__media img {
-  border-radius: 5%;
+  border-radius: 5px;
 }
 
+@media (min-width: 600px) {
+  .about-us-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
 .front-page-pic {
   width: 100%;
   height: 100%;
