--- a/web/app/themes/midgardstheme/sass/_frontpage.scss
+++ b/web/app/themes/midgardstheme/sass/_frontpage.scss
@@ -1,10 +1,10 @@
 .front-page-pic
 {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: absolute;
     z-index: -1;
-    background: linear-gradient(to top, rgba(128, 128, 128, 0.232), rgba(128, 128, 128, 0.232)), url(http://midgards.test/app/uploads/2022/11/IMG_7715.jpeg) no-repeat top center;
+    background: linear-gradient(to top, rgba(128, 128, 128, 0.232), rgba(128, 128, 128, 0.232)), url(http://midgards.test/app/uploads/2022/11/door.jpeg) no-repeat top center;
     box-shadow: inset 0 0 99999px rgba(63, 63, 63, 0.496);
 }
 
