--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -12,13 +12,14 @@
 }
 
 .header-title a, .header-title a:hover {
-  color: black;
+  color: white;
   text-decoration: none;
 }
 
 .menu-main-container {
   grid-row: 2;
   padding-top: 1rem;
+  color: white;
 }
 
 #menu-main {
@@ -33,12 +34,12 @@
 
 #menu-main a {
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 #menu-main a:hover {
   text-decoration: underline;
-  color: black;
+  color: #C0C0C0;
 }
 
 body {
@@ -238,10 +239,10 @@ body {
 }
 .front-page-pic {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   z-index: -1;
-  background: linear-gradient(to top, rgba(128, 128, 128, 0.232), rgba(128, 128, 128, 0.232)), url(http://midgards.test/app/uploads/2022/11/IMG_7715.jpeg) no-repeat top center;
+  background: linear-gradient(to top, rgba(128, 128, 128, 0.232), rgba(128, 128, 128, 0.232)), url(http://midgards.test/app/uploads/2022/11/door.jpeg) no-repeat top center;
   box-shadow: inset 0 0 99999px rgba(63, 63, 63, 0.496);
 }
 
