5-BEHANDLING adds page and sass file for behandlingar

--- a/web/app/themes/midgardstheme/sass/style.scss
+++ b/web/app/themes/midgardstheme/sass/style.scss
@@ -8,6 +8,7 @@
 @import 'general/typography';
 @import 'partials/footer';
 @import 'partials/about-us';
+@import 'partials/behandlingar';
 
 @import 'frontpage';
 
