--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -237,6 +237,41 @@ body {
     grid-template-columns: 1fr 1fr;
   }
 }
+.treatment-content {
+  margin: 2rem 0 2rem;
+}
+.treatment-content .treatment-info {
+  background-color: rgb(235, 235, 235);
+  padding: 1.5rem;
+}
+.treatment-content .treatment-title {
+  margin-top: 2rem;
+}
+.treatment-content .treatment-text {
+  margin-top: 1rem;
+}
+.treatment-content .treatment-text p {
+  margin-bottom: 3rem;
+}
+.treatment-content .wp-block-button {
+  color: white;
+}
+
+@media (min-width: 600px) {
+  .treatment-content {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
+  }
+  .treatment-content .treatment-image {
+    display: flex;
+    justify-content: center;
+  }
+  .treatment-content .treatment-title {
+    margin-top: 0;
+  }
+}
 .front-page-pic {
   width: 100%;
   height: 100vh;
