--- a/web/app/themes/midgardstheme/sass/partials/_header.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_header.scss
@@ -7,12 +7,6 @@
     padding-top: 1rem;
 }
 
-.header-icon img
-{
-    height: 200px;
-    width: 200px;
-}
-
 .header-title a, .header-title a:hover
 {
     color: white;
@@ -49,12 +43,19 @@
 {
     position: relative;
     margin: auto;
+    padding: 0 1rem;
+}
+
+.menu-main-container a
+{
+    padding: 12px;
 }
 
 .menu-main-container .sub-menu
 {
-    margin:auto;
+    padding: 0;
 }
+//end of submenu css
 
 #menu-main
 {
@@ -65,6 +66,7 @@
     background-color: rgb(58 58 58 / 89%);
     height: 3rem;
     font-weight: 600;
+    margin: 0;
 }
 
 #menu-main a
