changed design for contact page on midgards

--- a/web/app/themes/midgardstheme/sass/partials/_contact.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_contact.scss
@@ -1,5 +1,7 @@
 .contact-midgard
 {
-    margin: 0;
-    padding: 0 5rem;
+    margin-top: 1rem;
+    padding: 2rem 0 2rem 5rem;
+    border-radius: 5px;
+    background-color: #E9DCC9;
 }
