--- a/web/app/themes/midgardstheme/sass/_frontpage.scss
+++ b/web/app/themes/midgardstheme/sass/_frontpage.scss
@@ -12,8 +12,7 @@
 {
     text-decoration: none;
     background-color: rgb(58 58 58 / 89%);
-    color: black;
-    margin: auto;
+    margin: 1rem auto;
     padding: 1rem;
     width: 80ch;
     text-align: center;
