--- a/web/app/themes/midgardstheme/sass/partials/_about-us.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_about-us.scss
@@ -13,14 +13,20 @@
         .wp-block-media-text__content {
             margin: 2rem 0 2rem;
             padding: 0;
-            background-color: $grey;
+            background-color: #E9DCC9;
             padding: 2rem;
             border-radius: 5px;
             line-height: 1.5rem;
         }
 
+        .wp-block-media-text__media{
+            text-align: center;
+        }
+
         .wp-block-media-text__media img{
             border-radius: 5px;
+            height: 50%;
+            width: 50%;
         }
     }
 }
