changed contact side css for midgards per client's request

--- a/web/app/themes/midgardstheme/sass/partials/_contact.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_contact.scss
@@ -1,7 +1,6 @@
 .contact-midgard
 {
-    margin-top: 1rem;
-    padding: 2rem 0 2rem 5rem;
-    border-radius: 5px;
-    background-color: #E9DCC9;
+    margin: 0;
+    padding: 0 5rem;
+    background-color: #FCF5E5;
 }
