--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -151,10 +151,9 @@ body {
   }
 }
 .contact-midgard {
-  margin-top: 1rem;
-  padding: 2rem 0 2rem 5rem;
-  border-radius: 5px;
-  background-color: #E9DCC9;
+  margin: 0;
+  padding: 0 5rem;
+  background-color: #FCF5E5;
 }
 
 .single-post-content {
