changed some css for the treatment posts

--- a/web/app/themes/midgardstheme/sass/partials/_behandlingar.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_behandlingar.scss
@@ -5,8 +5,9 @@
     margin: 2rem 0 2rem;
 
     .treatment-info {
-        background-color: rgb(235, 235, 235);
+        background-color: #E9DCC9;
         padding: 1.5rem;
+        border-radius: 5px;
 
         .treatment-text {
             margin: 3rem 0 2rem;
