--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -269,8 +269,9 @@ body {
   margin: 2rem 0 2rem;
 }
 .treatment-content .treatment-info {
-  background-color: rgb(235, 235, 235);
+  background-color: #E9DCC9;
   padding: 1.5rem;
+  border-radius: 5px;
 }
 .treatment-content .treatment-info .treatment-text {
   margin: 3rem 0 2rem;
