shop page updated

--- a/web/app/themes/midgardstheme/sass/style.scss
+++ b/web/app/themes/midgardstheme/sass/style.scss
@@ -8,5 +8,5 @@
 @import 'general/typography';
 @import 'partials/footer';
 @import 'partials/single-product';
-
+@import 'partials/products';
 @import 'frontpage';
