--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -182,6 +182,36 @@ body {
   color: rgb(17, 26, 13);
 }
 
+.woocommerce-result-count {
+  color: black;
+  font-weight: 700;
+}
+
+.orderby {
+  border-radius: 5px;
+}
+
+.product {
+  background-color: rgb(199, 199, 199);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.product img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  aspect-ratio: 4/3;
+  background-color: white;
+}
+.product .woocommerce-loop-product__title {
+  color: black;
+  font-weight: 700;
+}
+.product .price {
+  padding: 0;
+  font-weight: 300;
+}
+
 .front-page-pic {
   width: 100%;
   height: 100%;
