designed coachande samtal and updated contact page css

--- a/web/app/themes/midgardstheme/sass/style.scss
+++ b/web/app/themes/midgardstheme/sass/style.scss
@@ -2,15 +2,18 @@
 @import 'partials/news-grid';
 @import 'partials/contact';
 @import 'partials/singlepost';
-//GENERAL
-@import 'general/colors';
-@import 'general/responsive';
-@import 'general/typography';
 @import 'partials/footer';
 @import 'partials/about-us';
 @import 'partials/behandlingar';
 @import 'partials/single-product';
 @import 'partials/products';
+@import 'partials/coachande';
+
+//GENERAL
+@import 'general/colors';
+@import 'general/responsive';
+@import 'general/typography';
+
 @import 'frontpage';
 
 
