--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -156,6 +156,10 @@ body {
   background-color: #FCF5E5;
 }
 
+.contact-halsocenter {
+  padding: 2rem;
+}
+
 .single-post-content {
   display: flex;
   flex-direction: column;
@@ -342,6 +346,10 @@ body {
 .product .price {
   padding: 0;
   font-weight: 300;
+}
+
+.coachande-samtal .wp-block-media-text {
+  padding: 2rem;
 }
 
 .front-page-pic {
