css fix for om mig page on hälsocenter

--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -352,6 +352,10 @@ body {
   padding: 2rem;
 }
 
+.about-me .wp-block-media-text {
+  padding: 2rem;
+}
+
 .front-page-pic {
   width: 100%;
   height: 100vh;
