--- a/web/app/themes/midgardstheme/sass/style.scss
+++ b/web/app/themes/midgardstheme/sass/style.scss
@@ -8,6 +8,7 @@
 @import 'partials/single-product';
 @import 'partials/products';
 @import 'partials/coachande';
+@import 'partials/about-me';
 
 //GENERAL
 @import 'general/colors';
