16-KURSER adds style for kurser

--- a/web/app/themes/midgardstheme/sass/style.scss
+++ b/web/app/themes/midgardstheme/sass/style.scss
@@ -9,6 +9,7 @@
 @import 'partials/footer';
 @import 'partials/about-us';
 @import 'partials/behandlingar';
+@import 'partials/kurser';
 
 @import 'frontpage';
 
