--- a/web/app/themes/midgardstheme/sass/general/_colors.scss
+++ b/web/app/themes/midgardstheme/sass/general/_colors.scss
@@ -2,3 +2,4 @@ $falu: rgba(130, 20, 20, 1);
 $blue: rgba(11, 44, 65, 1);
 $blue-light: rgba(72, 103, 123, 1);
 $grey: rgb(236, 228, 228);
+$white-grey:  rgb(235, 235, 235);
