--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -309,6 +309,51 @@ body {
     gap: 2rem;
   }
 }
+.courses-content {
+  margin: 4rem 0;
+}
+.courses-content .course-single {
+  display: flex;
+  flex-direction: column;
+  margin: 4rem 0 4rem;
+}
+.courses-content .course-info {
+  padding: 1.5rem;
+  background-color: rgb(235, 235, 235);
+  color: black;
+}
+.courses-content .course-info .course-title {
+  border-bottom: 2px solid black;
+  display: inline;
+}
+.courses-content .course-info .course-text p {
+  margin: 1.5em 0;
+}
+.courses-content .wp-block-button {
+  padding-top: 2rem;
+  color: rgb(235, 235, 235);
+}
+
+.course-image {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 0.5rem;
+}
+.course-image img {
+  border-radius: 100%;
+  width: 250px;
+  height: 250px;
+}
+
+@media (min-width: 600px) {
+  .courses-content .course-single {
+    display: flex;
+    flex-direction: row;
+  }
+  .courses-content .course-image {
+    margin-right: 1rem;
+  }
+}
 .front-page-pic {
   width: 100%;
   height: 100vh;
