--- a/web/app/themes/midgardstheme/sass/partials/_header.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_header.scss
@@ -23,18 +23,38 @@
 //hamburger meny
 
 .mobile-container {
-    display: flex;
-    justify-content: center;
-    text-align: center; 
+    // display: flex;
+    // justify-content: center;
+    // text-align: center; 
     width: 100%;
     margin: auto;
     background-color: rgb(58 58 58 / 89%);
     height: auto;
     color: white;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+
+    .mobile-container-menu {
+        display: none;
+    }
+    .close-menu-icon {
+        display: none;
+    }
+
+    .menu-icons {
+        justify-content: end;
+        display: flex;
+        padding: 10px;
+
+        svg {
+            cursor: pointer;
+        }
+       
+    }
     .menu-item {
 
-        padding: 0.7rem;
+        padding: 0.7rem;    
 
         a {
             text-decoration: none;
