--- a/web/app/themes/midgardstheme/sass/partials/_footer.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_footer.scss
@@ -1,24 +1,27 @@
 .site-footer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background-color: rgba(72, 103, 123, 1);
     justify-content: space-around;
-    padding: 20px 0 20px 0;
+    padding: 2rem;
     color: #d5d5d5; 
 
     .footer-midgard {
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
+      padding: 1.5rem 0;
 
     }
 
-    .footer-halsocenter ,   .footer-byggteknik{
+    .footer-halsocenter,   .footer-byggteknik{
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
+      padding: 1.5rem 0;
 
-      span {
+      a {
+        text-decoration: none;
         color: #d5d5d5; 
       }
     }
@@ -58,5 +61,13 @@
         }
     }
 
+
+}
+
+@media (min-width: $tablet-landscape) {
+    .site-footer {
+        display: flex;
+        flex-direction: row;
+    }
 
 }
