--- a/web/app/themes/midgardstheme/sass/partials/_products.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_products.scss
@@ -1,36 +1,74 @@
-
-
-
-
+// .woocommerce-breadcrumb{  
+//     a{
+//     color: black;
+//     }
+// }
 .woocommerce-result-count {
     color: black;
-    font-weight: 700;
+    font-weight: 600;
 }
 
 .orderby {
     border-radius: 5px;
-
 }
 
-.product {
-    background-color: rgb(199, 199, 199);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+// .product {
+//     background-color: rgb(145, 143, 143);
+//     // display: flex;
+//     // flex-direction: column;
+//     // align-items: center;
+//     border-radius: 5px;
 
-    img{
-        object-fit: contain;
-        aspect-ratio: 4/3;
-        background-color: white;
-    }
-    .woocommerce-loop-product__title{
+//     img{
+//         background-color: white;
+//         border-radius: 5px;
+//     }
+//     .woocommerce-loop-product__title{
+//         color: black;
+//         font-weight: 600;
+//     }
+//     .price{
+//         text-align: center;
+//         font-weight: 300;
+//     }
+
+//     h2{
+//         text-align: center;
+//     }
+// }
+
+.woocommerce .products ul,
+.woocommerce ul.products {
+ display: flex;
+ flex-flow: row wrap;
+ 
+}
+
+.woocommerce ul.products li.product,
+.woocommerce-page ul.products li.product {
+ display: flex;
+ flex-flow: column nowrap;
+ background-color: lightgrey;
+ align-items: center;
+
+    h2{
+        text-align: center;
         color: black;
-        font-weight: 700;
     }
+
+
     .price{
-        padding: 0;
-        font-weight: 300;
+        text-align: center;
+        color: black;
+    }
+
+    a.added_to_cart{
+        color: green;
     }
 }
 
+.woocommerce ul.products li.product .button {
+ margin-top: auto;
+ display: table;
+}
 
