--- a/web/app/themes/midgardstheme/sass/partials/_single-product.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_single-product.scss
@@ -1,8 +1,39 @@
-// .price  {
-//     color: black !important ;
+.woocommerce div.product div.summary{
 
-// }
+    background-color: rgba(255, 255, 255, 0.74);
 
-.woocommerce-Price-amount {
-    color: rgb(17, 26, 13);
+    .product_title {
+        font-size: 48px;
+    }
+    .button{
+
+            box-shadow: 0px 1px 0px 0px #fff6af;
+            background:linear-gradient(to bottom, #c4ff64 5%, #23ff48 100%);
+            background-color:#69ff64;
+            border-radius:6px;
+            border:1px solid #8dff22;
+            color:#333333;
+            text-decoration:none;
+            text-shadow:0px 1px 0px #c4ff66;
+    }
+    a{
+        color: black;
+        font-weight: 700;
+    }
+
+    span {
+        bdi{
+            color: black;
+        }
+    }
+}
+
+.woocommerce div.product form.cart{
+    flex-direction: row;
+    align-items: center;
+    display: flex;
+}
+
+div.product .woocommerce-tabs {
+    background-color: rgba(255, 255, 255, 0.74);
 }
