--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -188,7 +188,7 @@ body {
   background-color: rgb(72, 103, 123);
   justify-content: space-around;
   padding: 20px 0 20px 0;
-  color: #d5d5d5;
+  color: #e9e8e8;
 }
 .site-footer .footer-midgard {
   display: flex;
@@ -201,7 +201,14 @@ body {
   justify-content: space-evenly;
 }
 .site-footer .footer-halsocenter span, .site-footer .footer-byggteknik span {
-  color: #d5d5d5;
+  color: #e9e8e8;
+}
+.site-footer .footer-halsocenter span a, .site-footer .footer-byggteknik span a {
+  color: #e9e8e8;
+}
+.site-footer .footer-halsocenter span a:hover, .site-footer .footer-byggteknik span a:hover {
+  color: lightgreen;
+  text-decoration: none;
 }
 .site-footer .footer-social {
   display: flex;
@@ -310,38 +317,80 @@ body {
     gap: 2rem;
   }
 }
-.woocommerce-Price-amount {
-  color: rgb(17, 26, 13);
+.woocommerce div.product div.summary {
+  background-color: rgba(255, 255, 255, 0.74);
+}
+.woocommerce div.product div.summary .product_title {
+  font-size: 48px;
+}
+.woocommerce div.product div.summary .button {
+  box-shadow: 0px 1px 0px 0px #fff6af;
+  background: linear-gradient(to bottom, #c4ff64 5%, #23ff48 100%);
+  background-color: #69ff64;
+  border-radius: 6px;
+  border: 1px solid #8dff22;
+  color: #333333;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #c4ff66;
+}
+.woocommerce div.product div.summary a {
+  color: black;
+  font-weight: 700;
+}
+.woocommerce div.product div.summary span bdi {
+  color: black;
+}
+
+.woocommerce div.product form.cart {
+  flex-direction: row;
+  align-items: center;
+  display: flex;
+}
+
+div.product .woocommerce-tabs {
+  background-color: rgba(255, 255, 255, 0.74);
 }
 
 .woocommerce-result-count {
   color: black;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .orderby {
   border-radius: 5px;
 }
 
-.product {
-  background-color: rgb(199, 199, 199);
+.woocommerce .products ul,
+.woocommerce ul.products {
   display: flex;
-  flex-direction: column;
+  flex-flow: row wrap;
+}
+
+.woocommerce ul.products li.product,
+.woocommerce-page ul.products li.product {
+  display: flex;
+  flex-flow: column nowrap;
+  background-color: lightgrey;
   align-items: center;
 }
-.product img {
-  -o-object-fit: contain;
-     object-fit: contain;
-  aspect-ratio: 4/3;
-  background-color: white;
-}
-.product .woocommerce-loop-product__title {
+.woocommerce ul.products li.product h2,
+.woocommerce-page ul.products li.product h2 {
+  text-align: center;
   color: black;
-  font-weight: 700;
 }
-.product .price {
-  padding: 0;
-  font-weight: 300;
+.woocommerce ul.products li.product .price,
+.woocommerce-page ul.products li.product .price {
+  text-align: center;
+  color: black;
+}
+.woocommerce ul.products li.product a.added_to_cart,
+.woocommerce-page ul.products li.product a.added_to_cart {
+  color: green;
+}
+
+.woocommerce ul.products li.product .button {
+  margin-top: auto;
+  display: table;
 }
 
 .front-page-pic {
@@ -361,4 +410,18 @@ body {
   width: 80ch;
   text-align: center;
   color: white;
+}
+
+.wc-block-components-sidebar-layout .wc-block-components-main {
+  background-color: rgba(255, 255, 255, 0.7176470588);
+  margin-top: 10px;
+}
+
+.wc-block-components-sidebar {
+  margin-top: 10px;
+  background-color: rgba(255, 255, 255, 0.7176470588);
+}
+
+.wc-block-components-product-name {
+  color: black;
 }/*# sourceMappingURL=style.css.map */
