--- a/web/app/themes/midgardstheme/sass/partials/_footer.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_footer.scss
@@ -36,6 +36,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        width: fit-content;
 
         button {
             border-radius: 10px;
