add and fix responsive design

--- a/web/app/themes/midgardstheme/sass/partials/_news-grid.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_news-grid.scss
@@ -5,8 +5,8 @@
     margin: 5rem 0 5rem;
     padding-bottom: 10px;
     display: inline-block;
-    color: white;
-    border-bottom: 3px solid rgb(232, 232, 232);
+    color: rgb(0, 0, 0);
+    border-bottom: 3px solid rgb(0, 0, 0);
 }
 .news-grid {
     margin-bottom: 3rem;
