--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -113,8 +113,8 @@
   margin: 5rem 0 5rem;
   padding-bottom: 10px;
   display: inline-block;
-  color: white;
-  border-bottom: 3px solid rgb(232, 232, 232);
+  color: rgb(0, 0, 0);
+  border-bottom: 3px solid rgb(0, 0, 0);
 }
 
 .news-grid {
@@ -261,6 +261,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 .site-footer .footer-contact button {
   border-radius: 10px;
@@ -440,6 +443,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 .site-footer .footer-contact button {
   border-radius: 10px;
