--- a/web/app/themes/midgardstheme/sass/partials/_products.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_products.scss
@@ -1,8 +1,10 @@
-// .woocommerce-breadcrumb{  
-//     a{
-//     color: black;
-//     }
-// }
+.woocommerce .woocommerce-breadcrumb{
+    padding-top: 5px;
+    a {
+    color:black;
+    margin-top: 5px;
+    }
+}
 .woocommerce-result-count {
     color: black;
     font-weight: 600;
@@ -11,31 +13,6 @@
 .orderby {
     border-radius: 5px;
 }
-
-// .product {
-//     background-color: rgb(145, 143, 143);
-//     // display: flex;
-//     // flex-direction: column;
-//     // align-items: center;
-//     border-radius: 5px;
-
-//     img{
-//         background-color: white;
-//         border-radius: 5px;
-//     }
-//     .woocommerce-loop-product__title{
-//         color: black;
-//         font-weight: 600;
-//     }
-//     .price{
-//         text-align: center;
-//         font-weight: 300;
-//     }
-
-//     h2{
-//         text-align: center;
-//     }
-// }
 
 .woocommerce .products ul,
 .woocommerce ul.products {
