--- a/web/app/themes/midgardstheme/sass/partials/_single-product.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_single-product.scss
@@ -38,3 +38,29 @@
 div.product .woocommerce-tabs {
     background-color: rgba(255, 255, 255, 0.74);
 }
+
+
+div.summary .product_title {
+    text-align: center;
+}
+
+.woocommerce div.product p.price{
+    padding-left: 10px;
+}
+
+.product_meta{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.woocommerce .quantity .qty {
+    margin-top: 5px;
+}
+
+.woocommerce div.product form.cart{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:10px;
+}
