--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -267,8 +267,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
   width: fit-content;
 }
 .site-footer .footer-contact button {
@@ -408,6 +406,39 @@ div.product .woocommerce-tabs {
   background-color: rgba(255, 255, 255, 0.74);
 }
 
+div.summary .product_title {
+  text-align: center;
+}
+
+.woocommerce div.product p.price {
+  padding-left: 10px;
+}
+
+.product_meta {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.woocommerce .quantity .qty {
+  margin-top: 5px;
+}
+
+.woocommerce div.product form.cart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
+.woocommerce .woocommerce-breadcrumb {
+  padding-top: 5px;
+}
+.woocommerce .woocommerce-breadcrumb a {
+  color: black;
+  margin-top: 5px;
+}
+
 .woocommerce-result-count {
   color: black;
   font-weight: 600;
@@ -497,8 +528,6 @@ div.product .woocommerce-tabs {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
   width: fit-content;
 }
 .site-footer .footer-contact button {
