--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -200,6 +200,7 @@
 
 .contact-halsocenter {
   padding: 2rem;
+  margin: 0;
 }
 
 .single-post-content {
@@ -267,6 +268,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
 }
 .site-footer .footer-contact button {
@@ -528,6 +531,8 @@ div.summary .product_title {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
 }
 .site-footer .footer-contact button {
