--- a/web/app/themes/midgardstheme/sass/partials/_about-us.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_about-us.scss
@@ -1,16 +1,19 @@
 @import '../general/responsive';
 @import '../general/colors';
 
-.about-us-content {
+.about-us-content
+{
     display: grid;
     grid-template-columns: 1fr;
     gap: 3rem;
     margin: 2rem 0 2rem;
 
-    .wp-block-media-text {
+    .wp-block-media-text
+    {
         display: initial;
 
-        .wp-block-media-text__content {
+        .wp-block-media-text__content
+        {
             margin: 2rem 0 2rem;
             padding: 0;
             background-color: #E9DCC9;
@@ -19,11 +22,13 @@
             line-height: 1.5rem;
         }
 
-        .wp-block-media-text__media{
+        .wp-block-media-text__media
+        {
             text-align: center;
         }
 
-        .wp-block-media-text__media img{
+        .wp-block-media-text__media img
+        {
             border-radius: 5px;
             height: 50%;
             width: 50%;
@@ -31,8 +36,10 @@
     }
 }
 
-@media (min-width: $tablet) {
-    .about-us-content {
+@media (min-width: $tablet)
+{
+    .about-us-content
+    {
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
