--- a/web/app/themes/midgardstheme/sass/partials/_behandlingar.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_behandlingar.scss
@@ -1,56 +1,68 @@
 @import '../general/responsive';
 @import '../general/colors';
 
-.treatment-content {
+.treatment-content 
+{
     margin: 2rem 0 2rem;
 
-    .treatment-info {
+    .treatment-info 
+    {
         background-color: #E9DCC9;
         padding: 1.5rem;
         border-radius: 5px;
 
-        .treatment-text {
+        .treatment-text 
+        {
             margin: 3rem 0 2rem;
         }
 
-        .treatment-title {
+        .treatment-title 
+        {
             border-bottom: 2px solid black;
             display: inline;
             margin-top: 2rem;
             padding-bottom: 0.4rem;
         }
 
-        .wp-block-button {
+        .wp-block-button 
+        {
             margin-top: 2rem;
         }
     }
 
-    .treatment-image {
+    .treatment-image 
+    {
         display: flex;
         justify-content: center;
 
-        img {
+        img 
+        {
             border-radius: 100%;
             width: 250px;
             height: 250px;
         }
     }
 
-    .treatment-text {
+    .treatment-text 
+    {
         margin-top: 1rem;
 
-        p {
+        p 
+        {
             margin-bottom: 3rem;
         }
     }
     
-    .wp-block-button {
+    .wp-block-button 
+    {
         color: white;
     }
 }
 
-@media (min-width: $tablet) {
-    .treatment-content {
+@media (min-width: $tablet) 
+{
+    .treatment-content 
+    {
         display: flex;
         gap: 2rem;
         }
