--- a/web/app/themes/midgardstheme/sass/partials/_footer.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_footer.scss
@@ -1,4 +1,5 @@
-.site-footer {
+.site-footer
+{
     display: flex;
     flex-direction: column;
     background-color: rgba(72, 103, 123, 1);
@@ -6,7 +7,8 @@
     padding: 2rem;
     color: #d5d5d5; 
 
-    .footer-midgard {
+    .footer-midgard
+    {
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
@@ -14,58 +16,68 @@
 
     }
 
-    .footer-halsocenter,   .footer-byggteknik{
+    .footer-halsocenter,   .footer-byggteknik
+    {
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
       padding: 1.5rem 0;
 
-      span {
+      span
+      {
         color: #e9e8e8; 
 
-        a{
+        a
+        {
             color:#e9e8e8;
         }
 
-        a:hover {
+        a:hover
+        {
             color:lightgreen;
             text-decoration: none;
         }
       }
     }
 
-    .footer-social {
+    .footer-social
+    {
         display: flex;
         flex-direction: row;
         margin-top: 10px;
     }
 
-    .footer-contact {
+    .footer-contact
+    {
         display: flex;
         flex-direction: column;
         justify-content: center;
         width: fit-content;
 
-        button {
+        button
+        {
             border-radius: 10px;
             border-style: none;
             background-color: rgba(21, 94, 140, 1);
             padding: 10px 15px;
             outline: none;
 
-            a{
+            a
+            {
                 color: #d5d5d5; 
                 text-decoration: none;
             }
 
-            ul{
+            ul
+            {
                 list-style-type: none;
                 padding: 0;
                 margin: auto;
             }
         }
 
-        button:hover {
+        button:hover
+        {
             background-color: rgb(4, 31, 48);
         }
     }
@@ -73,8 +85,10 @@
 
 }
 
-@media (min-width: $tablet-landscape) {
-    .site-footer {
+@media (min-width: $tablet-landscape)
+{
+    .site-footer 
+    {
         display: flex;
         flex-direction: row;
     }
