--- a/web/app/themes/midgardstheme/sass/partials/_header.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_header.scss
@@ -1,22 +1,23 @@
 @import '../general/responsive';
 @import '../general/colors';
 
-.site-header {
+.site-header
+{
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 2fr 1fr;
     text-align: center;
     padding-top: 1rem;
 
-    .header-title a{
+    .header-title a
+    {
         color: white;
         text-decoration: none;
         font-weight: 700;
     }
 
-    
-
-    .menu-main-container{
+    .menu-main-container
+    {
         grid-row: 2;
         padding-top: 1rem;
         color: white;
@@ -24,8 +25,8 @@
 }
 
 //hamburger meny
-
-.mobile-container {
+.mobile-container
+{
     width: 100%;
     margin: auto;
     background-color: rgb(58 58 58 / 89%);
@@ -35,60 +36,73 @@
     display: flex;
     flex-direction: column;
 
-    .mobile-container-menu {
+    .mobile-container-menu
+    {
         display: none;
     }
-    .close-menu-icon {
+    .close-menu-icon
+    {
         display: none;
     }
 
-    .menu-icons {
+    .menu-icons
+    {
         justify-content: end;
         display: flex;
         padding: 10px;
 
-        svg {
+        svg
+        {
             cursor: pointer;
         }
        
     }
-    .menu-item {
-
+    .menu-item
+    {
         padding: 0.7rem;    
 
-        a {
+        a
+        {
             text-decoration: none;
             color: white;
         }
         
-        a:hover {
+        a:hover
+        {
             text-decoration: underline;
             color: #C0C0C0;
         }
     }
 
-    ul {
+    ul
+    {
         list-style-type: none;
     }
   }
 
-.mobile-container ul {
+.mobile-container ul
+{
     padding: 0;
 }
 
-@media (max-width: $tablet-landscape) {
-    #menu-main {
+@media (max-width: $tablet-landscape)
+{
+    #menu-main 
+    {
         display: none;
     }
-
 }
-@media(min-width: $tablet-landscape) {
-    .mobile-container {
+
+@media(min-width: $tablet-landscape)
+{
+    .mobile-container
+    {
         display: none;
     }
    
 //submenu css
-    .menu-main-container ul ul {
+    .menu-main-container ul ul
+    {
         display: none;
         position: absolute;
         top: 3em;
@@ -100,11 +114,13 @@
         margin-top: -12px;
     }
 
-    .menu-main-container ul li:hover > ul {
+    .menu-main-container ul li:hover > ul
+    {
         display: block;
     }
 
-    .menu-main-container li {
+    .menu-main-container li
+    {
         position: relative;
         margin: auto;
     }
@@ -114,7 +130,8 @@
         padding: 12px;
     }
 
-    #menu-main {
+    #menu-main
+    {
         display: flex;
         list-style: none;
         justify-content: space-evenly;
@@ -126,11 +143,13 @@
         padding: 0px;
     }
 
-    #menu-main a {
+    #menu-main a
+    {
         text-decoration: none;
         color: white;
 
-        &:hover {
+        &:hover
+        {
             text-decoration: underline;
             color: #C0C0C0;
         }
