--- a/web/app/themes/midgardstheme/sass/partials/_kurser.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_kurser.scss
@@ -1,59 +1,71 @@
 @import '../general/responsive';
 @import '../general/colors';
 
-.courses-content {
+.courses-content
+{
      margin: 4rem 0;
 
-    .course-single {
+    .course-single
+    {
         display: flex;
         flex-direction: column;
         margin: 4rem 0 4rem;
     }
 
-    .course-info {
+    .course-info
+    {
         padding: 1.5rem;
         background-color: $white-grey;
         color: black;
 
-        .course-title {
+        .course-title
+        {
             border-bottom: 2px solid black;
             display: inline;
         }
 
-        .course-text {
-            p {
+        .course-text
+        {
+            p
+            {
                 margin: 1.5em 0;
             }
         }
     }
 
-    .wp-block-button {
+    .wp-block-button
+    {
         padding-top: 2rem;
         color: $white-grey;
     }
 } 
 
-.course-image {
+.course-image
+{
     display: flex;
     justify-content: center;
     margin-bottom: 0.5rem;
 
-img {
+img
+{
     border-radius: 100%;
     width: 250px;
     height: 250px;
     }
 }
 
-@media (min-width: $tablet) {
-
-    .courses-content {
-        .course-single {
+@media (min-width: $tablet)
+{
+    .courses-content
+    {
+        .course-single
+        {
             display: flex;
             flex-direction: row;
         }
 
-        .course-image {
+        .course-image
+        {
             margin-right: 1rem;
        }
     } 
