--- a/web/app/themes/midgardstheme/sass/partials/_singlepost.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_singlepost.scss
@@ -1,9 +1,11 @@
-.single-post-content {
+.single-post-content
+{
     display: flex;
     flex-direction: column;
     margin: 5rem;
 
-    .single-post-text {
+    .single-post-text
+    {
         background-color: rgba(11, 44, 65, 1) ;
         color: rgb(226, 226, 226);
         margin-top: 3rem;
@@ -11,19 +13,23 @@
         line-height: 1.6rem;
     }
 
-    .single-post-title {
+    .single-post-title
+    {
         padding-bottom: 0.5rem;
         border-bottom: solid; 
         display: inline;
     }
 
-    .single-post-description {
+    .single-post-description
+    {
         margin: 2rem 0 2rem;
     }
 
-    .single-post-image {
+    .single-post-image
+    {
         
-        img  {
+        img 
+        {
             width: 100%;
             height: auto;
             border: solid 3px rgba(11, 44, 65, 1);
