--- a/web/app/themes/midgardstheme/sass/style.scss
+++ b/web/app/themes/midgardstheme/sass/style.scss
@@ -9,6 +9,8 @@
 @import 'partials/products';
 @import 'partials/coachande';
 @import 'partials/about-me';
+@import 'partials/cart';
+@import 'partials/frontpage';
 
 //GENERAL
 @import 'general/colors';
@@ -18,9 +20,3 @@
 @import 'partials/about-us';
 @import 'partials/behandlingar';
 @import 'partials/kurser';
-
-@import 'frontpage';
-@import 'partials/cart';
-
-
-
